add: put and delete user
