# src/application/dtos/update-user.dto.ts
@@ -1,0 +1,33 @@
+import { IsEmail, IsOptional, IsString, MinLength } from 'class-validator';
+import { ApiProperty } from '@nestjs/swagger';
+
+export class UpdateUserDto {
+  @ApiProperty({
+    example: 'John Doe',
+    description: 'Nome do usuário',
+    required: false,
+  })
+  @IsString()
+  @IsOptional()
+  name?: string;
+
+  @ApiProperty({
+    example: 'john.doe@example.com',
+    description: 'Email do usuário',
+    required: false,
+  })
+  @IsString()
+  @IsEmail({}, { message: 'Email inválido' })
+  @IsOptional()
+  email?: string;
+
+  @ApiProperty({
+    example: '123456',
+    description: 'Senha do usuário (mínimo 6 caracteres)',
+    required: false,
+  })
+  @IsString()
+  @IsOptional()
+  @MinLength(6, { message: 'A senha deve ter no mínimo 6 caracteres' })
+  password?: string;
+}
